--- a/Progress Steps/index.html
+++ b/Progress Steps/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Progress Steps</title>
+    <title>Progress Step Animation</title>
+    <!-- Linking the Stylesheet -->
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
